force-app/main/default/objects/Service_Appointment_Delete__e/Service_Appointment_Delete__e.object-meta.xml
<CustomObject>
    <label>Service Appointment - Delete</label>
    <pluralLabel>Service Appointment - Delete</pluralLabel>
</CustomObject>