force-app/main/default/objects/Service_Appointment_Delete__e/fields/Appointment_Hours__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Hours__c</fullName>
    <label>Appointment Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>