force-app/main/default/objects/Service_Appointment_Delete__e/fields/Service_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Id__c</fullName>
    <label>Service Territory Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>